eerste versie mob

--- a/index.html
+++ b/index.html
@@ -1,21 +1,149 @@
 <!DOCTYPE html>
 <html lang="nl">
-	
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="Andrea Beglarian">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2425</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Klarna</title>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+    <header>
+        <nav>
+         <img class="logo" src="img/klarnalogo.png" alt="Klarna logo">
+         <a href="leeg.html" class="login">Login</a>
+        </nav>
+    </header>
 
-	<script defer src="scripts/script.js"></script>
+<section class="intro">
+    <img class="img" src="img/startfoto.png" alt="Klarna app op mobiel">
+    <h1>30 dagen om te betalen, rente-vrij</h1>
+    <p>Met onze in-app winkelbrowser kun je naar elk merk zoeken en al je favorieten later betalen.</p>
+</section>
+
+    <a href="leeg.html" class="knop">Download de app</a>
+
+<section class="spotlight">
+    <h2>Winkels in de spotlight</h2>
+    
+</section>
+
+<section class="payment">
+    <h2>Koop met Klarna</h2>
+    <p> Shop zoals shoppen hoort te zijn. Moeiteloos, veilig en leuk.</p>
+    <img src="img/pay.png" alt="payment afbeelding">
+</section>
+
+<section class="payment2">
+    <h3>Koop nu</h3>
+    <p>Koop vandaag en betaal later. Geen rente. Geen extra kosten. Geen moeite.</p>
+    <img src="img/pay2.png" alt="payment afbeelding">
+    <h3>Betaal later</h3>
+    <p>Tijdens het afrekenen bij je favoriete webwinkel vul je eenvoudige persoonsgegevens in die je altijd in je geheugen hebt en kies je voor 'Betaal later' om je bestelling af te rekenen.</p>
+    <img src="img/pay3.png" alt="payment afbeelding">
+    <h3>State-of-the-art app</h3>
+    <p>Je shopbeleving wordt naar nog hogere sferen getild door onze app. De app laat het niet gebeuren dat jij een betaling mist. Als er iets mis is met de aankoop, kan je het betaalproces makkelijk pauzeren in de tijd dat wij het tot op de bodem uitzoeken.</p>
+    <p></p>
+</section>
+
+<section class="gold"><img src="img/goldphone.png" alt="afbeelding van de Klarna app">
+    <h2>De Klarna app</h2>
+    <h3>Al je aankopen op één plek</h3>
+    <p>Hier zie je duidelijk wat je hebt gekocht en wanneer je moet betalen. Compleet met handige reminders zodat je niets vergeet.</p>
+    <ul>
+        <li>Manage betalingen, volg je uitgaven en meld retouren aan.</li>
+        <li>Hou je must-haves in de gaten door ze te bewaren in collecties.</li>
+        <li>Ons klantenserviceteam staat 24/7 voor je klaar.</li>
+    </ul>
+</section>
+
+<a href="leeg.html" class="knop">Download de app</a>
+
+<section class="coupons">
+    <h2>Alle kortingen en coupons</h2>
+    <p>De beste online kortingen en coupons, inclusief Klarna-exclusief, dagelijks bijgewerkt.</p>
+</section>
+
+<section class="winkels">
+    <h2>Klarna winkels</h2>
+    <p>Hier komen miljoenen shoppers en shops samen. Shoppen is smoother dan ooit.</p>
+    <!-- <div class="winkelLogos"></div> -->
+    <img src="img/bestseller.png" alt="logo Bestseller">
+    <img src="img/booking.png" alt="logo Booking.com">
+    <img src="img/fonq.png" alt="logo Fonq">
+    <img src="img/gamma.png" alt="logo Gamma">
+    <img src="img/hunkemollerlogo.png" alt="logo Hunkemoller">
+    <img src="img/mediamarkt.png" alt="logo Mediamarkt">
+    <img src="img/omodalogo.png" alt="logo Omoda">
+    <img src="img/philips.png" alt="logo Philips">
+    <img src="img/samsunglogo.png" alt="logo Samsung">
+    <img src="img/tommylogo.png" alt="logo Tommy Hilfiger">
+    <img src="img/vidaxl.png" alt="logo Vida XL">
+    <h3>Bekijk alle winkels <span class="pijl"></span></h3>
+</section>
+
+<section class="betalen">
+    <h2>Klarna geeft je de beste opties om te betalen</h2>
+    <p>Je betaalt wat je wil, wanneer je wil.</p>
+</section>
+
+<section class="nu">
+    <h3>Betaal nu</h3>
+    <p>Ben je zeker van je aankoop? Betaal gelijk. Klarna rekent hiervoor geen extra kosten. Je kan met één klik betalen, of met iDEAL.</p>
+</section>
+
+<section class="later">
+    <h3>Betaal later</h3>
+    <p>Koop vandaag, en geniet direct na bezorging alvast met volle teugen van je aankoop. Je kan tot en met 14 (of 30) dagen na je bestelling genieten voordat je betaalt. Betalen doe je online of in de app natuurlijk. Met één klik, via iDEAL - alles kan!</p>
+</section>
+
+<section class="coupons">
+    <h2>Over Klarna</h2>
+    <p>Ons ultieme doel is om beste shopbeleving van de wereld te creëren. Ons uitgangspunt is dat betalingen meer moeten zijn dan een transactie. Daarom zijn onze betaalmogelijkheden eropuit om jou meer ontspanning, tijd en controle te geven, zodat jij op andere dingen kan focussen.</p>
+</section>
+
+<section class="over">
+    <h2>85m</h2>
+    <p>85 miljoen shoppers maken gebruik van Klarna. De dagelijkse miljoen transacties illustreren de waarde die consumenten aan onze betaalmogelijkheden hechten.</p>
+    <h2>450K+</h2>
+    <p>Wereldwijd werken we samen met 450+ duizend webwinkels. Of het nu grote of kleine shops zijn, merken kiezen voor een samenwerking met Klarna om een moeiteloze shopbeleving te bieden aan hun klanten.</p>
+    <h2>18jr</h2>
+    <p>Al 18 jaar maken we betalingen mogelijk. Altijd met dezelfde filosofie in ons achterhoofd - de smoothste shopbeleving van de wereld creëren.</p>
+</section>
+
+<section class="verkopen">
+    <h2>Heb jij een winkel en wil je verkopen met Klarna?</h2>
+    <p><a href="leeg.html"> Lees meer</a></p>
+</section>
+
+<footer>
+   <img src="img/klarnalogo.png" alt="Klarna logo">
+   <h2>Klarna</h2>
+   <p>Over ons</p>
+   <p>Careers</p>
+   <p>Legal</p>
+   <p>Pers</p>
+   <p>Privacy en veiligheid</p>
+   <p>Duurzaamheid</p>
+   <p>Gedragscode BNPL</p>
+   <p>Wikipink</p>
+   <h3>Klant</h3>
+   <h3>Zakelijk</h3>
+
+   <section class="taal">
+    <img src="img/nlvlag.png" alt="Nederlandse vlag">
+    <p>Nederland</p>
+   </section>
+   
+
+</footer>
+
+
+
+  
+    
 </body>
-	
 </html>
